<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="park"
        android:textSize="35sp" />

    <RadioGroup
        android:id="@+id/ange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="147dp">

        <RadioButton
            android:id="@+id/thierry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thierry"
           />

        <RadioButton
            android:id="@+id/ange1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ange1"/>

        <RadioButton
            android:id="@+id/ishimwe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ishimwe"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/lionel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="200dp">

        <RadioButton
            android:id="@+id/lionel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lionel"
            />

        <RadioButton
            android:id="@+id/imena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imena"/>

        <RadioButton
            android:id="@+id/kirenga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kirenga"/>
    </RadioGroup>

    <Button
        android:id="@+id/click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/click1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp"
        android:onClick="buttonClicked"
        android:text="@string/clicked_thierry" />

    <Button
        android:id="@+id/click1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="183dp"
        android:layout_marginStart="112dp"
        android:onClick="buttonClicked1"
        android:text="@string/clicked_lionel" />



</RelativeLayout>